<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have a account?</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_birthday">Birthday</string>

    <string name="register_info_helper">We will need some information to complete your register!</string>

    <string name="label_parrot_selector">Swipe for choose your parrot</string>

    <string name="register_done">Done</string>

    <string name="password_input_error">Invalid password, it must be composed by 8 numbers</string>

    <string name="username_input_error">Invalid username, it must be composed only by normal characters and have at least 3</string>
    <string name="username_unavailable">Username unavailable</string>

    <string name="birthday_date_picker_title">Select your birthday</string>

</resources>